--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animate_do: ^3.0.2
   fluttertoast: ^8.0.2
+  google_nav_bar: ^5.0.6
 
 
 dev_dependencies:
@@ -63,13 +64,21 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/bell.png
+    - assets/cart.png
+    - assets/filter.png
+    - assets/account.png
+    - assets/search.png
+    - assets/home.png
     - assets/icon.png
     - assets/icon1.jpeg
     - assets/prof.webp
-    - assets/pic1.webp
+    - assets/pic1.jpg
     - assets/pic2.webp
-    - assets/pic3.webp
-    - assets/pic4.webp
+    - assets/pic3.png
+    - assets/pic4.jpeg
+    - assets/pic5.webp
+    - assets/pic6.jpg
     - assets/menu.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
