--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,20 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/bell.png
-    - assets/cart.png
-    - assets/filter.png
-    - assets/account.png
-    - assets/search.png
-    - assets/home.png
-    - assets/icon.png
-    - assets/icon1.jpeg
-    - assets/prof.webp
-    - assets/pic1.jpg
-    - assets/pic4.jpeg
-    - assets/pic5.webp
-    - assets/pic6.jpg
-    - assets/menu.png
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
